--- a/main.html
+++ b/main.html
@@ -9,14 +9,13 @@
 
 <body>
 	<button type="button" class="btn btn-primary" id = "button-1">button-1</button>
-	<button type="button" class="btn btn-secondary" id = "button-2">button-2</button>
+	<button type="button" class="btn btn-secondary add" id = "button-2">button-2</button>
 	<button type="button" class="btn btn-success" id = "button-3">button-3</button>
 	<button type="button" class="btn btn-danger" id = "button-4">button-4</button>
 	<button type="button" class="btn btn-warning" id = "button-5">button-5</button>
 	<button type="button" class="btn btn-info" id = "button-6">button-6</button>
 	<button type="button" class="btn btn-light" id = "button-7">button-7</button>
-	<button type="button" class="btn btn-dark" id = "button-8">button-8</button>
-	<button type="button" class="btn btn-link" id = "button-9">button-9</button>
+	<button type="button" class="btn btn-link" id = "button-8">button-8</button>
 	
     <script type="text/javascript" src="./script.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
