--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 
 <body>
 	<button type="button" class="btn btn-primary" id = "button-1">button-1</button>
-	<button type="button" class="btn btn-secondary add" id = "button-2">button-2</button>
-	<button type="button" class="btn btn-success" id = "button-3">button-3</button>
-	<button type="button" class="btn btn-danger" id = "button-4">button-4</button>
-	<button type="button" class="btn btn-warning" id = "button-5">button-5</button>
-	<button type="button" class="btn btn-info" id = "button-6">button-6</button>
+	<button type="button" class="btn btn-outline-secondary" id = "button-2">button-2</button>
+	<button type="button" class="btn btn-success btn-lg" id = "button-3">button-3</button>
+	<button type="button" class="btn btn-danger btn-sm" id = "button-4">button-4</button>
+	<button type="button" class="btn btn-warning btn-lg btn-block" id = "button-5">button-5</button>
+	<button type="button" class="btn btn-info disabled" id = "button-6">button-6</button>
 	<button type="button" class="btn btn-light" id = "button-7">button-7</button>
 	<button type="button" class="btn btn-link" id = "button-8">button-8</button>
 	
